--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
         <meta charset="UTF-8">
         <title>PigGame</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="theme-color" content="#EB4D4D" />
         <link rel='icon' href='fav.ico' type='image/x-icon' />
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,600" rel="stylesheet" type="text/css">
         <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="app.css" />
+        <link rel="manifest" href="manifest.json" />
     </head>
     <body>
         <div class="gameboard">
