--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="app.css" />
         <link rel="manifest" href="manifest.json" />
+        <link rel="icon" href="pig.png" sizes="512x512" />
+        <script async src="https://unpkg.com/pwacompat" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="gameboard">
