--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
             <button class="btn-new"><i class="ion-ios-plus-outline"></i>New game</button>
             <img src="dice-5.png" alt="Dice" class="dice hide" id="dice">
         </div>
+        <div id="full-body" class="hide">
+            <div class="content">
+                <div class="text">
+                </div>
+                <img src="celebration.png" />
+            </div>
+        </div>
     </body>
     <script src="app.js"></script>
 </html>
